add new fields:
* ImpactCategory.direction
* EpdModule.multiplier