@@ -1,20 +1,17 @@
 package org.openlca.core.database.descriptors;
 
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.junit.After;
-import org.junit.Before;
 import org.junit.Test;
 import org.openlca.core.Tests;
 import org.openlca.core.database.FlowDao;
-import org.openlca.core.database.FlowPropertyDao;
 import org.openlca.core.database.IDatabase;
 import org.openlca.core.model.Flow;
 import org.openlca.core.model.FlowProperty;
 import org.openlca.core.model.FlowType;
 import org.openlca.core.model.UnitGroup;
 import org.openlca.core.model.descriptors.Descriptor;
+import org.openlca.core.model.descriptors.FlowDescriptor;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
@@ -23,30 +20,16 @@ import static org.junit.Assert.assertTrue;
 public class FlowDescriptorTest {
 
 	private final IDatabase db = Tests.getDb();
-	private final FlowDao flowDao = new FlowDao(db);
-
-	private FlowProperty property;
-	private Flow flow;
-
-	@Before
-	public void setUp() {
-		property = new FlowProperty();
-		property = new FlowPropertyDao(db).insert(property);
-		flow = new Flow();
-		flow.referenceFlowProperty = property;
-		flow = flowDao.insert(flow);
-	}
-
-	@After
-	public void tearDown() {
-		flowDao.delete(flow);
-		new FlowPropertyDao(db).delete(property);
-	}
 
 	@Test
 	public void testGetRefFlowPropertyId() {
-		var d = flowDao.getDescriptor(flow.id);
+		var property =  db.insert(new FlowProperty());
+		var flow = new Flow();
+		flow.referenceFlowProperty = property;
+		flow = db.insert(flow);
+		var d = (FlowDescriptor) db.getDescriptor(Flow.class, flow.id);
 		assertEquals(property.id, d.refFlowPropertyId);
+		db.delete(flow, property);
 	}
 
 	@Test
@@ -59,12 +42,12 @@ public class FlowDescriptorTest {
 		var e = Flow.elementary("e", mass);
 
 		db.insert(units, mass, p, w, e);
-
 		var descriptors = Stream.of(p, w, e)
 			.map(Descriptor::of)
-			.collect(Collectors.toList());
+			.toList();
+		var dao = new FlowDao(db);
 		for (var f : descriptors) {
-			var xs = flowDao.getDescriptors(f.flowType);
+			var xs = dao.getDescriptors(f.flowType);
 			for (var g : descriptors) {
 				if (f == g) {
 					assertTrue(xs.contains(g));
@@ -74,7 +57,7 @@ public class FlowDescriptorTest {
 			}
 		}
 
-		var all = flowDao.getDescriptors(FlowType.values());
+		var all = dao.getDescriptors(FlowType.values());
 		for (var d : descriptors) {
 			assertTrue(all.contains(d));
 		}
